Tests work (Karma removed)
Need more work on Sass and Browserify

--- a/src/main/sass/philhosoft-base.scss
+++ b/src/main/sass/philhosoft-base.scss
@@ -1,4 +1,4 @@
-@import "mycom-base";
+// PhiLhoSoft's base Sass styles
 
 @mixin border-radius($radius)
 {
@@ -26,6 +26,8 @@
 }
 
 $base-font: OpenSans, Verdana, sans-serif;
+$font-color: #333;
+$font-color-dark: black;
 
 $light-gray: #EEE;     // for backgrounds
 $medium-gray: #CCC;    // for borders
